--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "2.3.5",
   "description": "双绑形式的antd。受控组件的双绑、Form表单验证",
   "main": "./lib/index.js",
-  "repository": "git@github.com:ysyfff/q-antd.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ysyfff/q-antd"
+  },
   "author": "shiyong.yin <braveyin168@outlook.com> braveyin168@outlook.com",
   "license": "MIT",
   "devDependencies": {
