--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   ],
   "scripts": {
     "compile": "q-antd-tools run compile",
-    "test": "jest --config .jest.js"
+    "test": "jest --config .jest.js",
+    "lint": "eslint tests components ./.eslintrc.js --ext '.js,.jsx'"
   }
 }
